Bug 484990 - Wayland protocol error causes plasmashell to exit when switching panel from vertical screen edge to horizontal
Summary: Wayland protocol error causes plasmashell to exit when switching panel from v...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-04-03 16:00 UTC by Nate Graham
Modified: 2024-04-05 07:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-04-03 16:00:22 UTC
Current git master everything from KDE, Qt 6.6.2, Fedora 39.


STEPS TO REPRODUCE
1. Have a single-screen setup with a panel on the left or right screen edge
2. Right-click on panel > Show Panel configuration
3. Use panel configuration dialog to move the panel to the top or bottom screen edge


OBSERVED RESULT
plasmashell exits with a Wayland protocol error:
> kf.plasma.quick: location should be set before showing popup window
> zwlr_layer_surface_v1#122: error 1: the layer surface has a height of 0 but its anchor doesn't
> include the top and the bottom screen edge
> The Wayland connection experienced a fatal error: Protocol error

It's not a crash, so there's no backtrace.
Comment 1 Nate Graham 2024-04-04 15:35:54 UTC
Will be fixed with https://invent.kde.org/plasma/layer-shell-qt/-/merge_requests/66.
Comment 2 Vlad Zahorodnii 2024-04-05 07:24:43 UTC
Git commit 0a31923938d2fda8ed28e3208065f19c2e20ecff by Vlad Zahorodnii.
Committed on 04/04/2024 at 08:59.
Pushed by vladz into branch 'master'.

Update the desired size when the anchors change

When the anchor changes, the desired size should be updated to avoid
the compositor posting a protocol error.

M  +21   -25   src/qwaylandlayersurface.cpp
M  +1    -0    src/qwaylandlayersurface_p.h

https://invent.kde.org/plasma/layer-shell-qt/-/commit/0a31923938d2fda8ed28e3208065f19c2e20ecff
Comment 3 Vlad Zahorodnii 2024-04-05 07:34:03 UTC
Git commit 32afbcf68a820c84f6b666f5602a2bd9dd08ef1b by Vlad Zahorodnii.
Committed on 05/04/2024 at 07:29.
Pushed by vladz into branch 'Plasma/6.0'.

Update the desired size when the anchors change

When the anchor changes, the desired size should be updated to avoid
the compositor posting a protocol error.
(cherry picked from commit 0a31923938d2fda8ed28e3208065f19c2e20ecff)

M  +21   -25   src/qwaylandlayersurface.cpp
M  +1    -0    src/qwaylandlayersurface_p.h

https://invent.kde.org/plasma/layer-shell-qt/-/commit/32afbcf68a820c84f6b666f5602a2bd9dd08ef1b