Update the desired size when the anchors change

When the anchor changes, the desired size should be updated to avoid
the compositor posting a protocol error.

BUG: 484990